new intersction file content

--- a/css/toolbar-bottom.css
+++ b/css/toolbar-bottom.css
@@ -39,7 +39,9 @@
       border-radius: 2rem;
       background: var(--chip-bg);
       cursor: pointer;
-      border: 1px solid var(--    --chip-border);
+      display: flex;
+      align-items: center;
+      border: 2px solid var(--chip-border);
       animation: popIn-chip 0.4s var(--chip-final-delay) ease-in-out forwards;
      animation: popIn-chip 0.5s var(--chip-final-delay) cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
     }
@@ -63,8 +65,9 @@
     .chip:active {
       transform: scale(0.9);
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
-      transition: all 0.6s ease;
-
+    background: var(--chip-bg-active);
+      border: 2px solid var(--chip-text);
+      color: var(--chip-text)
     }
   
   .chip.toggle-on {
