added keypress controll for bottom toolbar

--- a/css/toolbar-bottom.css
+++ b/css/toolbar-bottom.css
@@ -62,7 +62,7 @@
 
       }
 
-    .chip:active {
+    .chip:active, .chip.active  {
       transform: scale(0.9);
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
     background: var(--chip-bg-active);
