--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,4 +1,4 @@
-  :root {
+  /* :root {
       --sidebar-w: 72px;
       --sidebar-bg: #eee;
       --sidebar-border: #e6e9ef;
@@ -6,14 +6,14 @@
       --sidebar-space: 0.4rem;
       --sidebar-font-size: 0.8rem;
       --sidebar-final-delay: 0.6s;
-  }
+  } */
 
   /* Animation  starts */
 
   @keyframes popIn-tool {
       to {
           opacity: 1;
-          font-size: var(--toolbar-font-size);
+          /* font-size: var(--toolbar-font-size); */
           padding: var(--toolbar-space);
       }
   }
@@ -95,7 +95,7 @@
       padding: var(--sidebar-space);
       gap: var(--sidebar-space);
       box-shadow: 0px var(--sidebar-space) calc(var(--sidebar-space)*4) rgba(0, 0, 0, 0.5);
-    pointer-events: auto;
+      pointer-events: auto;
   }
 
 
