--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
       --space: 0.4rem;
       --border-radius: 1.6rem;
       --input-bg: #eee;
-
+      
       --chip-final-delay: 1s;
       --chip-bg: #eee;
       --chip-bg-active: #e8f0fe;
@@ -14,7 +14,7 @@
       --toolbar-border-radius: 1.6rem;
       --toolbar-space: 0.4rem;
       --toolbar-font-size: 0.8rem;
-
+      
       --sidebar-w: 72px;
       --sidebar-bg: #eee;
       --sidebar-border: #e6e9ef;
@@ -22,36 +22,38 @@
       --sidebar-space: 0.4rem;
       --sidebar-font-size: 0.8rem;
       --sidebar-final-delay: 0.6s;
-
+      
   }
-
+  
   * {
       transition: all 0.2s;
       box-sizing: border-box;
   }
-
+  
   html,
   body {
       height: 100%;
       margin: 0;
       font-family: Inter, system-ui, Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
+      overflow: hidden;
   }
-
+  
   .app {
       display: flex;
       height: 100vh;
       overflow: hidden;
-      touch-action: none
+      touch-action: none;
   }
-
+  
   canvas {
       flex: 1;
       display: block;
       background: linear-gradient(180deg, var(--bgstart), var(--bgend));
-      touch-action: none
+      touch-action: none;
+      overflow: hidden;
   }
-
+  
   #editor {
       position: absolute;
       display: none;
@@ -70,7 +72,7 @@
       z-index: 1000;
       -webkit-user-modify: read-write-plaintext-only;
   }
-
+  
   #editor-tray {
       display: flex;
       align-items: center;
@@ -78,30 +80,52 @@
       padding: var(--space);
       background: red;
       border-radius: var(--border-radius);
-
+      
   }
-
-
+  
+  
   /* transition: transform 0.25s ease, opacity 0.25s ease; */
   #name,
-#name-input {
-  transition: transform 0.35s cubic-bezier(0.68, -0.55, 0.27, 1.55), 
-            opacity 0.25s ease;
+  #name-input {
+      transition: transform 0.35s cubic-bezier(0.68, -0.55, 0.27, 1.55),
+          opacity 0.25s ease;
       border-radius: var(--border-radius);
-  transform-origin: center;
-}
-
-#name-input {
+      transform-origin: center;
+  }
+  
+  #name {
+      max-width: 150px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: inline-block;
+  }
+  
+  #name-input {
       outline: 2px solid var(--accent);
       padding: calc(var(--space) / 2);
-border: none;
-}
+      border: none;
+  }
+  
+  
+  .hidden {
+      opacity: 0;
+      transform: scale(0.8);
+      pointer-events: none;
+      position: absolute;
+  }
+  
+  select, input{
+      padding: calc(var(--space) / 2);
+      border-radius: var(--border-radius);
 
-    .hidden {
-    opacity: 0;
-    transform: scale(0.8);   
-    pointer-events: none;
-    position: absolute;
-    }
-
- 
+  }
+  
+  
+  /*
+  #bottomBar:focus-within .header-chip,
+  #bottomBar:focus-within .zoom-tag,
+  #bottomBar:focus-within .color-picker {
+      display: none !important;
+  }
+  */
