--- a/src/index.css
+++ b/src/index.css
@@ -309,7 +309,7 @@ input {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03);
   aspect-ratio: 1;
   animation: popIn-tool 0.4s var(--chip-final-delay) ease-in-out forwards;
-
+ color: rgb(51, 51, 51);
 }
 
 
