--- a/src/index.css
+++ b/src/index.css
@@ -397,10 +397,25 @@ input {
   left: 0;
   right: 0;
   margin: auto;
-
+animation: bubblePopPellet  calc(var(--chip-final-delay)*0.25) ease forwards;
+  
   pointer-events: none;
 }
 
+
+@keyframes bubblePopPellet {
+    0% {
+        transform: scale(0.9) translateY(4rem);
+    }
+
+    80% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1) translateY(0);
+    }
+} 
 .topbar-wrapper {
   display: flex;
   justify-content: center;
