--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 
 :root {
   --accent: #2563eb;
+
+  --focus:  black;
   --space: 0.4rem;
   --border-radius: 1.6rem;
   --font-size: 0.8rem;
@@ -295,7 +297,7 @@ input {
   margin: auto;
 animation: bubblePopPellet  calc(var(--delay)*0.25) ease forwards;
   
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 
@@ -388,5 +390,13 @@ animation: bubblePopPellet  calc(var(--delay)*0.25) ease forwards;
   display: flex;
   aspect-ratio: 1;
   border-radius: 1rem;
+  cursor: pointer;
+  pointer-events: auto;
+  outline: 0px solid transparent;
+  border: 0px solid transparent;
 }
 
+.color-ball:focus {
+  outline: 1px solid var(--focus);
+  border: 1px solid var(--focus);
+}
