--- a/src/assets/css/animation-delay.css
+++ b/src/assets/css/animation-delay.css
@@ -29,26 +29,30 @@
 /* side-bottom button(3) end */
 
 .toolbar div:nth-child(1) {
-  animation-delay: calc(var(--delay) * 2);
+  animation-delay: calc(var(--delay) * 2.5);
 
 }
 
 .toolbar div:nth-child(2) {
-  animation-delay: calc(var(--delay) * 1.5);
+  animation-delay: calc(var(--delay) * 2);
 }
 
 .toolbar div:nth-child(3) {
-  animation-delay: calc(var(--delay)* 1);
+  animation-delay: calc(var(--delay)* 1.5);
 }
 
 .toolbar div:nth-child(4) {
   animation-delay: calc(var(--delay) * 1 );
 }
 
-.toolbar div:nth-child(6) {
-  animation-delay: calc(var(--delay) * 1.5);
+.toolbar div:nth-child(5) {
+  animation-delay: calc(var(--delay) * 1.5 );
 }
 
-.toolbar div:nth-child(7) {
+.toolbar div:nth-child(6) {
   animation-delay: calc(var(--delay) * 2);
+}
+
+.toolbar button:nth-child(7) {
+  animation-delay: calc(var(--delay) * 2.5);
 }
